# rust-backend

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
config/: config.example.yml  config.test.yml
migrations/: 20220823232739_create_user_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  router.rs  server.rs
src/db/: mod.rs  user.rs
src/domain/: user.rs
src/errors/: api.rs
src/handler/: mod.rs  status_handler.rs  user_handler.rs
src/utils/: hasher.rs
tests/api/: helpers.rs  main.rs  status_handler.rs  user_handler.rs
tests/api/helpers/: app.rs  mod.rs  response.rs
