[package]
name = "todo-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"


[dependencies]
async-trait = "0.1.57"
axum = "0.5.15"
config = "0.13.2"
dotenv = "0.15.0"
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
