[package]
name = "todo-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"


[dependencies]
async-trait = "0.1.57"
axum = "0.5.15"
chrono = { version = "0.4.22", features = ["serde"] }
config = "0.13.2"
dotenv = "0.15.0"
env_logger = "0.9.0"
hyper = { version = "0.14.20", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = [
  "postgres",
  "offline",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "migrate",
] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
